--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -18,10 +18,25 @@ h1,h2,h3{
     margin: 1.2em;
 }
 
+h4{
+    margin: 2em 1.2em;
+}
+
 p{
     color: #797979;
     margin: 1.2em;
     font-size: 1em;
+}
+
+h3{
+    margin: 0.5em 1.2em 0 1.2em;
+    color: #A92424;
+}
+
+.titre-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* ------------------------ NORMALIZE ------------------------ */
@@ -41,34 +56,20 @@ body>header>h1:first-of-type{
     margin-left: 1rem;
 }
 
-.titre-article01,
-.titre-article02,
-.titre-article03,
-.titre-article04,
-.titre-article05{
-    padding: 1em 0 0 0 ;
-}
-
+/* Article 01 */
 .titre-article01{
+    padding: 1em 0 0 0 ;
+
     mix-blend-mode: luminosity;
 }
-
-.titre-article02{
-    mix-blend-mode: hard-light;
-}
-
-.titre-article01 h1,
-.titre-article02 h1{
+.titre-article01 h1{
     font-size: 5em;
     margin: 2em 0 0 0.3em ;
     line-height: 1em;
 }
-.titre-article02 h1{
-    font-size: 4em;
-}
 
-.titre-article02 h1:nth-of-type(2){
-    margin: 0 0 0 0.3em ;
+.titre-article01 h2{
+    text-align: right;
 }
 
 .titre-article01 h1,
@@ -77,26 +78,60 @@ body>header>h1:first-of-type{
     text-transform: lowercase;
 }
 
-/*.titre-article02 h1{*/
-/*    color: #A92424;*/
-/*}*/
-
 .titre-article01 h2{
-    text-align: right;
+    font-size: 1.2em;
+    margin: 0 4.2em 0 1.2em;
+    padding-bottom: 0;
 }
 
-.titre-article01 h2,
+header{
+    height: 375px;
+}
+
+/* Article autres */
+.titre-article02,
+.titre-article03,
+.titre-article04,
+.titre-article05{
+    padding: 1em 0 0 0 ;
+}
+
+.titre-article02 h1,
+.titre-article03 h1,
+.titre-article04 h1,
+.titre-article05 h1{
+    font-size: 4em;
+    margin: 2em 0 0 0.3em ;
+    line-height: 1em;
+}
+
+.titre-article02{
+    mix-blend-mode: hard-light;
+}
+.titre-article03,
+.titre-article04,
+.titre-article05{
+    mix-blend-mode: normal;
+}
+
+.titre-article03 h1{
+    color: #CC7C7C;
+}
+
+.titre-article02 h1:nth-of-type(2),
+.titre-article03 h1:nth-of-type(2),
+.titre-article04 h1:nth-of-type(2),
+.titre-article05 h1:nth-of-type(2){
+    margin: 0 0 0 0.3em ;
+}
+
 .titre-article02 h2,
 .titre-article03 h2,
 .titre-article04 h2,
 .titre-article05 h2 {
     font-size: 1.2em;
     margin: 0 4.2em 0 1.2em;
-
-}
-
-.titre-article01 h2:nth-of-type(2){
-    padding-bottom: 80px;
+    padding-bottom: 4em;
 }
 
 /* fil d'arianne */
@@ -127,6 +162,39 @@ body>header>h1:first-of-type{
     line-height: 1em;
     color: #BA5050;
     font-size: 4em;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     display: block;
 }
+
+/* ------------------------ LEGENDES & CHAPEAU ------------------------ */
+
+.legende-img,
+.chapeau{
+    font-family: "Poppins Light", sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1em;
+    border: 0.01px solid #707070;
+    margin-bottom: 50px;
+}
+
+
+.legende-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chapeau{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.article02>.article>p:nth-of-type(1){
+    font-family: "Poppins Light", sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1em;
+    text-align: center;
+}
+
